# resnet_libtorch

./: .gitignore  CMakeLists.txt  README.md  save_resnet.py  use_resnet.cpp  use_resnet.py
models/: labels.txt
